WIP: Change parser to accept optional polymorphic parameters.
There's a shift/reduce conflict that has to be fixed.

--- a/TODO.txt
+++ b/TODO.txt
@@ -5,6 +5,8 @@ Priority:
 Fbld 3:
 * Rewrite lang/fbld.txt for new proposed language.
 * Rewrite the fbld front end to support the new language.
+  - Figure out how to deal with parse conflict between '<' '>' used for
+    polymorphism and '<' '~' used for links.
 
 Fbld Test:
 * Test all ways an mtype decl can mismatch against an mdefn decl.
