Change fblc link syntax from ~>, <~, and <~> to +, -, and +-.
The syntax is much cleaner this way, more straight forward to parse,
easier for a developer to remember which polarity is expressed which
way, and avoids conflicts in the fbld grammar that arise when using <>
for polymorphism.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,12 +1,10 @@
 Priority:
-* Rewrite lang/fbld.txt for new proposed language.
+* Revise lang/fbld.txt a few more times until it makes sense.
 * Rewrite the fbld front end to support the new language.
 
 Fbld 3:
-* Rewrite lang/fbld.txt for new proposed language.
+* Revise lang/fbld.txt a few more times until it makes sense.
 * Rewrite the fbld front end to support the new language.
-  - Figure out how to deal with parse conflict between '<' '>' used for
-    polymorphism and '<' '~' used for links.
 
 Fbld Test:
 * Test all ways an mtype decl can mismatch against an mdefn decl.
