Work on fbld.txt language spec.

--- a/TODO.txt
+++ b/TODO.txt
@@ -4,8 +4,12 @@ Priority:
 
 Fbld 3:
 * Revise lang/fbld.txt a few more times until it makes sense.
- - Q: how to distinguish between struct expr and app expr in front end, given
-   we want <A, B, C> in one case and <A, B, C; D d, E e, F f> in another?
+ - Update spec to allow module parameters for mtype and type too.
+    With optional defaulting: <A, B, ...> => <A, B, ... ; >
+                                   ɛ      => < ; >
+ - Update spec and tests to say mtype and mdefn use the same name space as
+   type, func, proc. In particular, you cannot use the same name for an mtype,
+   mdefn, and type as was the case previously.
 * Rewrite the fbld front end to support the new language.
 
 Fbld Test:
